--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,8 +8,7 @@ jobs:
       - uses: actions/checkout@v4
       
       - name: Vet
-        run: |
-          go vet ./...
+        run: go vet ./...
           
       - name: Run Unit Tests
         run: GOOS=linux GOARCH=amd64 go test
