--- a/.github/workflows/final-main.yaml
+++ b/.github/workflows/final-main.yaml
@@ -37,7 +37,7 @@ jobs:
         id: meta
         uses: docker/metadata-action@v5.5.1
         with:
-          images: nicedayone7/hello-golang
+          images: nicedayone7/final-main
 
       - name: Build and push Docker Inage
         uses: docker/build-push-action@v5
